<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.social.messapp.LoginFragment"
    tools:showIn="@layout/activity_main" >

    <EditText
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="login"/>

        <Button
            android:id="@+id/registerButton"
            android:text="@string/register"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="register"/>

    </LinearLayout>

    <TextView
        android:id="@+id/forget_password"
        android:text="@string/forgotPassword"
        android:layout_gravity="center"
        android:paddingTop="@dimen/ten_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:textSize="@dimen/fifteen_padding"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/fifteen_padding"
        android:paddingBottom="@dimen/fifteen_padding"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/thirty_margin"
        android:layout_marginBottom="@dimen/ten_margin" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>


</LinearLayout>

