<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_color"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.social.messapp.SignUpActivity">


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:layout_marginLeft="@dimen/thirty_margin"
        android:layout_marginRight="@dimen/thirty_margin"
        android:padding="@dimen/fifteen_padding"
        android:background="@drawable/border_bottom"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:layout_marginLeft="@dimen/thirty_margin"
        android:layout_marginRight="@dimen/thirty_margin"
        android:padding="@dimen/fifteen_padding"
        android:background="@drawable/border_bottom"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/password2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password"
        android:textColorHint="@color/white"
        android:layout_marginLeft="@dimen/thirty_margin"
        android:layout_marginRight="@dimen/thirty_margin"
        android:padding="@dimen/fifteen_padding"
        android:background="@drawable/border_bottom"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:layout_marginLeft="@dimen/thirty_margin"
        android:layout_marginRight="@dimen/thirty_margin"
        android:padding="@dimen/fifteen_padding"
        android:background="@drawable/border_bottom"
        android:textColor="@color/white"/>

    <!-- <Spinner
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/country_arrays"
        android:paddingRight="@dimen/thirty_padding"
        android:paddingTop="@dimen/fifteen_padding"
        android:paddingBottom="@dimen/fifteen_padding"
        android:prompt="@string/country_prompt"
        android:gravity="left|start" /> -->

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:textColorHint="@color/white"
        android:layout_marginLeft="@dimen/thirty_margin"
        android:layout_marginRight="@dimen/thirty_margin"
        android:padding="@dimen/twenty_padding"
        android:background="@drawable/border_bottom"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/registerButton"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:onClick="register"
        android:layout_marginTop="@dimen/ten_margin"/>

</LinearLayout>
